--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "HTML5 Communication Demo",
+  "name": "Yapper",
   "description": "Demo of SEE, CORS and WS in HTML5",
   "version": "0.1.0",
   "author": "Zohar Arad",
   "dependencies": {
     "express": "2.5.2",
-    "jade": "0.19.0"
-    "connect-redis": "1.2.0"
-    "hiredis":"0.1.13"
+    "jade": "0.19.0",
+    "websocket": "1.0.2"
   },
   "devDependencies": {}
 }
